--- a/Problem Sets/Problem Set 1/Makefile
+++ b/Problem Sets/Problem Set 1/Makefile
@@ -31,7 +31,7 @@ CUDA_INCLUDEPATH=/usr/local/cuda-5.0/include
 #CUDA_INCLUDEPATH=/usr/local/cuda/include
 #CUDA_LIBPATH=/usr/local/cuda/lib
 
-NVCC_OPTS=-O3 -arch=sm_20 -Xcompiler -Wall -Xcompiler -Wextra -m64
+NVCC_OPTS=-O3 -arch=sm_50 -Xcompiler -Wall -Xcompiler -Wextra -m64
 
 GCC_OPTS=-O3 -Wall -Wextra -m64
 
@@ -49,6 +49,8 @@ compare.o: compare.cpp compare.h
 
 reference_calc.o: reference_calc.cpp reference_calc.h
 	g++ -c reference_calc.cpp -I $(OPENCV_INCLUDEPATH) $(GCC_OPTS) -I $(CUDA_INCLUDEPATH)
+
+all: student
 
 clean:
 	rm -f *.o *.png hw
