Some work already done + updated gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,10 +42,12 @@ if(CUDA_FOUND)
 #  add_subdirectory (HW1)
   add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 1")
   add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 2")
-  add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 3")
-  add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 4")
+#  add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 3")
+#  add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 4")
   #add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 5")
-  add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 6")
+#  add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/Problem Sets/Problem Set 6")
+
+  add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Lesson Code Snippets/Lesson 1 Code Snippets")
 else(CUDA_FOUND)
   message("CUDA is not installed on this system.")
 endif()
